# handtracking

./: .gitattributes  .gitignore  FINISHING.md  NOTES.md  calibration.json  camera.py  cameraLogi.py  camera_rknn.py  camera_student.py  camera_twostage_npu.py  colab.txt  compare_models.py  compare_mp_vs_rtmpose.py  comparison_report.md  distill_log.txt  evaluate_image.py  export_rknn.py  export_yolo_palm.py  file_map.txt  hand_test  instructions  instructions.txt  pyproject.toml  requirements.txt  ros_stereo_cam.txt  stereo_splitter.py  system_context.md  task_1.txt  test_onnx.py  test_onnx_collapse.py  test_simcc_overfit.py  test_torch_onnx.py  train_yolo_palm.py  training_log.txt  training_recommendations.md  update_rknn_runtime.sh
cpp/: CMakeLists.txt  OneEuroFilter.hpp  main.cpp  main_ros2.cpp
data/: rknn_calibration.txt
handtracking/: __init__.py  augmentations.py  bbox_kalman.py  bench_torch.py  compare_mp_student.py  dataset.py  dataset_manifest.py  dataset_native.py  distill_freihand.py  distill_multi.py  export_onnx.py  export_palm_onnx.py  geometry.py  live_camera.py  load_mmpose_weights.py  losses.py  one_euro_filter.py  phase3_verify.py  pnp_kinematics.py  qat_wrapper.py  simcc_numpy.py  teacher.py  topology.py  train.py  train_palm_detector.py  two_stage_pipeline.py  verify_forward.py  verify_samples.py  viz.py
handtracking.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
handtracking/models/: __init__.py  cspnext.py  hand_simcc.py  mobilenet_v4_conv_small.py  palm_detector.py  rtmcc_head.py  rtmpose_hand.py
scripts/: convert_ncnn.sh  onnx_to_tflite.sh
