[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "handtracking"
version = "0.1.0"
description = "21-point hand tracking (RTMPose-M + SimCC, edge deployment)"
requires-python = ">=3.10"
dependencies = [
  "opencv-python-headless>=4.8.0",
  "numpy>=1.24.0",
  "torch>=2.1.0",
  "torchvision>=0.16.0",
  "Pillow>=10.0.0",
  "tqdm>=4.66.0",
  "onnx>=1.15.0",
  "onnxsim>=0.4.33",
  "onnxruntime>=1.16.0",
  "scipy>=1.10.0",
]

[tool.setuptools.packages.find]
include = ["handtracking*"]
